# test_school

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
school/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
school/migrations/: 0001_initial.py
school/utils/: signals.py
